Paper : small edit.

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -294,7 +294,7 @@ then adjusting $\calA$ and $\xi$ so that
 \ee
 generates degenerate points in parameter space with $\ln \calL \simeq 0$.
 
-The conditions~\eqref{eq:defr}-\eqref{eq:rcondition} can be inverted for the sky position as follows. For a given complex value of $r$, $r(\lambda_{L}^{*}, \beta_{L}^{*}) = r$ can be rewritten as
+The conditions~\eqref{eq:defr}-\eqref{eq:rcondition} can be inverted for the sky position as follows. For a given complex value of $r = s_{a}^{\rm inj} / s_{e}^{\rm inj}$, $r(\lambda_{L}^{*}, \beta_{L}^{*}) = r$ can be rewritten as
 \be\label{eq:eqtosolveforlambdabetaL}
 	e^{4i\lambda_{L}^{*}}e^{i\frac{\pi}{3}} \frac{\left( 1 +\sin\beta_{L}^{*} \right)^{2}}{\left( 1 - \sin\beta_{L}^{*} \right)^{2}} = \frac{1+ i r}{1 - i r} \,.
 \ee
@@ -306,7 +306,7 @@ for
 \be
 	\rho = \sqrt{\left| \frac{1+ i r}{1 - i r} \right|} \,.
 \ee
-Solving for the argument of~\eqref{eqtosolveforlambdabetaL} gives four solutions for $\lambda_{L}^{*}$ as
+Solving for the argument of~\eqref{eq:eqtosolveforlambdabetaL} gives four solutions for $\lambda_{L}^{*}$ as
 \be\label{eq:solutionlambdaL}
 	\lambda_{L}^{*} = - \frac{\pi}{12} + \frac{1}{4}\mathrm{Arg} \frac{1+ i r}{1 - i r} + \frac{k \pi}{2} \quad \mathrm{for} \quad k = 0,\dots,3 \,.
 \ee
